--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "yarn build && gh-pages -d public -b master"
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
