--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
   "dependencies": {
     "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.238",
-    "gatsby-link": "^1.6.39",
-    "gatsby-plugin-google-analytics": "^1.0.24",
-    "gatsby-plugin-google-fonts": "1.0.1",
-    "gatsby-plugin-sass": "^1.0.23",
-    "include-media": "^1.4.9",
-    "milligram-scss": "^1.3.0",
-    "react-helmet": "^5.2.1"
+    "gatsby": "^4.11.2",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-sass": "^5.11.1",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-sharp": "^4.11.0",
+    "include-media": "^1.4.10",
+    "lodash": "^4.17.21",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.50.0"
   },
   "devDependencies": {
     "gh-pages": "^2.1.1"
