fix: update name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srdjan-rakic-portfolio",
-  "description": "Srdjan Rakic Portfolio",
+  "description": "Srgjan Rakikj Portfolio",
   "repository": {
     "type": "git",
     "url": "https://github.com/srdjanRakic/portfolio"
